--- a/query/package.json
+++ b/query/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.20.0",
     "nodemon": "^3.1.4"
